WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276603
Unreviewed, revert
273841@main
partially, which is regressing 64bit implementation
https://bugs.webkit.org/show_bug.cgi?id=276603
Summary
Unreviewed, revert 273841@main partially, which is regressing 64bit implement...
Yusuke Suzuki
Reported
2024-07-15 02:25:56 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-15 02:26:07 PDT
<
rdar://problem/131741850
>
Yusuke Suzuki
Comment 2
2024-07-15 02:27:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30815
EWS
Comment 3
2024-07-15 03:48:32 PDT
Committed
280965@main
(55b96047c0a6): <
https://commits.webkit.org/280965@main
> Reviewed commits have been landed. Closing PR #30815 and removing active labels.
EWS
Comment 4
2024-07-17 08:16:30 PDT
Committed
280938.14@integration/ci/131741850_55b96047c0_safari-7619-branch
(5c045b73add9): <
https://commits.webkit.org/280938.14@integration/ci/131741850_55b96047c0_safari-7619-branch
> Reviewed commits have been landed. Closing PR #1372 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug