Cherry-pick 55b96047c0a6. rdar://131741850

Unreviewed, revert 273841@main partially, which is regressing 64bit implementation
    https://bugs.webkit.org/show_bug.cgi?id=276603
    rdar://131741850

    The patch added const volatile for all WriteBarrier::get in 64bit, which is completely wrong since it avoids any CSE for loads.
    This immediately reverts that.

    * Source/JavaScriptCore/runtime/JSCJSValue.h:
    (JSC::JSValue::decodeConcurrent):
    (JSC::updateEncodedJSValueConcurrent):
    (JSC::clearEncodedJSValueConcurrent):
    * Source/JavaScriptCore/runtime/WriteBarrier.h:

    Canonical link: https://commits.webkit.org/280965@main

Canonical link: https://commits.webkit.org/280938.14@integration/ci/131741850_55b96047c0_safari-7619-branch